# django-errors

./: .bumpversion.cfg  .circle.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  NEWS.rst  README.md  db.sqlite3  index.html  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yaml  dlrsp-actions-pilot.marker  pull_request_template.md  release.yml
.github/workflows/: auto-merge-dependabot.yml  auto-merge.yml  cd.yml  changelog.yaml  ci.yaml  ci.yml  docs.yaml  docs.yml  label-merge-conflicts.yml  pr-approve.yaml  pr-rebase-on-labeled.yaml  pr-rebase-on-push.yaml  pr-recap.yaml  pre-commit.yml  pypi.yml  rebase-on-label.yml  rebase-on-labeled.yaml  rebase-on-labeled.yml  rebase.yml  release-lock-patch.yaml  release.yml  upgrade-dependency.yaml  upgrade-dependency.yml  verify-requirements.yaml
.github/workflows/test/: pr-rebase-on-labeled.yaml  pr-recap.yaml
community/contributing/: index.html
community/references/: index.html
community/status_code/: index.html
community/third-party-packages/: index.html
django_errors/: __init__.py  urls.py  views.py
django_errors/locale/cn/LC_MESSAGES/: django.mo
django_errors/locale/de/LC_MESSAGES/: django.po
django_errors/locale/en/LC_MESSAGES/: django.po
django_errors/locale/es/LC_MESSAGES/: django.mo  django.po
django_errors/locale/fr/LC_MESSAGES/: django.mo  django.po
django_errors/locale/it/LC_MESSAGES/: django.mo  django.po
django_errors/locale/lt/LC_MESSAGES/: django.mo  django.po
django_errors/locale/ru/LC_MESSAGES/: django.mo  django.po
django_errors/templates/: base.html  header.html
django_errors/templates/django_errors/: 400.html  403.html  404.html  500.html  index.html
django_errors/templates/errors/: 400.html
django_errors/tests/: test_errors.py  test_settings.py  tests.py
docs/: index.md
docs/community/: contributing.md  references.md  status_code.md
docs/tutorial/: customize.md  example.md  images.md  quickstart.md  templates.md
example/: settings.py  urls.py
example/example/: settings.py  urls.py
example/templates/: base.html  index.html
news/process/: 20260615-lock-upgrade.rst  20260702-lock-upgrade.rst  20260708-lock-upgrade.rst  20260714-lock-upgrade.rst
requirements/: .txt  compile.py  dev.in  docs.txt  py310-dev.txt  py310-django22.txt  py310-django32.txt  py310-django40.txt  py310-django42.txt  py310-django52.txt  py311-dev.txt  py311-django22.txt  py311-django32.txt  py311-django40.txt  py311-django42.txt  py311-django52.txt  py312-django32.txt  py312-django42.txt  py312-django52.txt  py313-django52.txt  py314-django52.txt  py36-django22.txt  py36-django32.txt  py37-django22.txt  py37-django32.txt  py38-dev.txt  py38-django22.txt  py38-django32.txt  py38-django40.txt  py38-django42.txt  py39-dev.txt  py39-django22.txt  py39-django32.txt  py39-django40.txt  py39-django42.txt  requirements.in
search/: search_index.json
src/django_errors/: __init__.py  apps.py  urls.py  views.py
src/django_errors/locale/cn/LC_MESSAGES/: django.po
src/django_errors/locale/de/LC_MESSAGES/: django.po
src/django_errors/locale/es/LC_MESSAGES/: django.po
src/django_errors/locale/fr/LC_MESSAGES/: django.po
src/django_errors/locale/it/LC_MESSAGES/: django.mo  django.po
src/django_errors/locale/ja/LC_MESSAGES/: django.po
src/django_errors/locale/lt/LC_MESSAGES/: django.po
src/django_errors/locale/nl/LC_MESSAGES/: django.po
src/django_errors/locale/ru/LC_MESSAGES/: django.po
src/django_errors/locale/zh_hans/LC_MESSAGES/: django.po
src/django_errors/middleware/: handler.py
src/django_errors/templates/: base.html
src/django_errors/templates/errors/: 400.html  403.html  404.html  405.html  500.html
tests/: settings.py  test_errors.py  test_errors_exceptions.py  test_errors_locale_it.py  test_errors_standard.py  test_errors_templates.py  test_errors_urls.py  urls.py  views.py  views_exceptions.py  views_standard.py  views_templates.py
tutorial/customize/: index.html
tutorial/example/: index.html
tutorial/images/: index.html
tutorial/quickstart/: index.html
tutorial/templates/: index.html
