[bdist_wheel]
universal=1

[metadata]
name = django-errors
version = 1.6.2
url = https://github.com/DLRSP/django-errors
author = DLRSP
author_email = dlrsp.dev@gmail.com
description = Django application for handling server errors.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
keywords =
    django
    errors
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries


[options]
package_dir=
    =src
setup_requires = Django>=3.2
install_requires = Django>=3.2
packages = find:
include_package_data = True
python_requires = >=3.8
zip_safe = False

[options.extras_require]
testing =
    coverage
    codecov
linting =
    flake8
    pylint

[options.packages.find]
where = src

[coverage:run]
branch = True
source = django_errors

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I,TYP
ignore = E203,E501,W503
